[package]
name = "solana-dust-cleaner"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "solana-dust-cleaner"  
path = "src/main.rs"

[[bin]]
name = "create-spam"       
path = "src/bin/create_test_env.rs"

[dependencies]
solana-sdk = "1.18"
solana-client = "1.18"
spl-token = "4.0"
anyhow = "1.0"
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }
solana-account-decoder = "1.18"
serde_json = "1.0"